# die-dapper-klein-pikkewyn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  webassembly.yml  windows.yml
android/: .gitignore  README.md  gradle.properties  settings.gradle
android/app/: build.gradle  lint-baseline.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dapperpenguin/ddkp/: MainActivity.java
android/gradle/: gradle-daemon-jvm.properties
projects/VS2022/raylib_game/: raylib_game.vcxproj
scripts/: build-ios.sh  build-web.sh
src/: Info.plist  Makefile  minshell.html  raylib_game.c  screen_battle.c  screen_gameplay.c  screen_layout.h  screen_title.c  screens.h  version.h
src/battle/: battle.c  battle.h  battle_anim.c  battle_anim.h  battle_grid.c  battle_grid.h  battle_menu.c  battle_menu.h  battle_sprites.c  battle_sprites.h  combatant.c  combatant.h  inventory.c  inventory.h  party.c  party.h
src/data/: armor_defs.c  armor_defs.h  creature_defs.c  creature_defs.h  forge_recipes.c  forge_recipes.h  item_defs.c  item_defs.h  lore_text.c  lore_text.h  move_defs.c  move_defs.h  room_templates.c  room_templates.h
src/dev/: style_preview.c  style_preview.h
src/field/: blacksmith_ui.c  blacksmith_ui.h  buildings.c  buildings.h  dev_warp_ui.c  dev_warp_ui.h  discard_ui.c  discard_ui.h  donation_ui.c  donation_ui.h  encounter.c  enemy.c  enemy.h  enemy_sprites.c  enemy_sprites.h  field.c  field.h  field_object.c  field_object.h  icons.c  icons.h  inventory_ui.c  inventory_ui.h  map_authored.c  map_dungeon_proc.c  map_dungeon_proc.h  map_source.c  map_source.h  npc.c  npc.h  player.c  player.h  salvager_ui.c  salvager_ui.h  stats_ui.c  stats_ui.h  tilemap.c  tilemap.h  village.c  village.h
src/overworld/: encounter.h  enemy.c  enemy.h  enemy_sprites.c  enemy_sprites.h  inventory_ui.c  inventory_ui.h  npc.c  npc.h  overworld.c  overworld.h  player.c  player.h  tilemap.c  tilemap.h
src/render/: paper_harbor.c  paper_harbor.h
src/sdl3_compat/: CMakeLists.txt  Info.plist.in  main.c  paper_harbor_stub.c  raylib.h  raylib_compat.c
src/state/: game_state.c  game_state.h  save.c  save.h
src/systems/: camera_system.c  camera_system.h  dialogue.c  dialogue.h  fab_menu.c  fab_menu.h  modal_close.c  modal_close.h  touch_input.c  touch_input.h  ui_button.c  ui_button.h
